Updated show file

--- a/app/views/matches/show.haml
+++ b/app/views/matches/show.haml
@@ -1,4 +1,4 @@
-%div{:class =>"match block#{last}" }
+%div{:class =>"match block" }
   .date= time_ago_in_words(@match.played_at)
   .match_players
     .local
