--- a/app/views/matches/show.haml
+++ b/app/views/matches/show.haml
@@ -15,6 +15,8 @@
   - if account_signed_in?
     = link_to "deja tu pronóstico", match_prediction_path(@match), :class=>"small iframe"
 
+%div{:style=>"clear:both;overflow:auto;"}
+
 %h3 Pronósticos      
 
 .block
