Added FB commit

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -6,7 +6,7 @@
 #main_content
       
   #ranking.block
-    %h2 Predicciones
+    %h2 Pronosticos
     .content_box= render :partial=>"matches/home_match", :collection => @matches
     
     
