--- a/app/views/matches/index.haml
+++ b/app/views/matches/index.haml
@@ -1,29 +1,25 @@
-.block
-  .content
-    %table.table.matches
-      %thead
-        %tr
-          %th.first Partido 
-          %th Jugado en
-          %th Lugar
-          %th Estadio
-          %th Equipo A
-          %th Equipo B
-          %th Goles A
-          %th Goles B
-          %th.last="&nbsp;"
-      %tbody
-        -@matches.each do |match|
-          %tr{:class=>cycle("even","odd")}
-            %td=match.number
-            %td=l(match.played_at)
-            %td=match.place
-            %td=match.stadium.name if match.stadium
-            %td=match.local.name if match.local
-            %td=match.visitor.name if match.visitor
-            %td=match.first_team_goals || 0
-            %td=match.second_team_goals || 0
-            %td.last
+%h1 Mundial 2010
+
+- @groups.each do |group|
+  %h2= group.name
+
+  .block
+    .content
+      %table.table.matches
+        %thead
+          %tr
+            %th.first Partido 
+            %th Fecha
+            %th Equipo
+            %th Equipo
+            %th.last="&nbsp;"
+        %tbody
+          - group.matches.each do |match|
+            %tr{:class=>cycle("even","odd")}
+              %td=match.number
+              %td=l(match.played_at, :format=>:short)
+              %td= "#{match.local.name} - #{match.first_team_goals || '--'}" if match.local
+              %td= "#{match.visitor.name} - #{match.second_team_goals || '--'}" if match.visitor
             
 - content_for :sidebar do
 
