--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,15 +5,15 @@
     = stylesheet_link_tag 'reset', '../javascripts/fancybox/jquery.fancybox-1.3.1','style','formtastic', 'formtastic_changes'
     = yield :include
         
-  %body
+  %body{:class=>controller.controller_name}
     #header
       #header_content
         %h1= link_to "Patatoon", root_path
         %ul.menu
           %li= link_to 'Inicio', root_path
-          %li= link_to 'Campeonatos', matches_path        
+          %li= link_to 'Encuentros', matches_path        
           %li= link_to 'Jugadores', players_path
-          / %li= link_to 'Predicciones', "#" #url_for(:predictions, :index)        
+          %li= link_to 'Predicciones', predictions_path
           %li= link_to 'Acerca de...', "#", :class=>"last" # url_for(:posts, :about)
         - if account_signed_in?
           #logged_as
