--- a/app/views/profiles/_future_match.html.haml
+++ b/app/views/profiles/_future_match.html.haml
@@ -3,6 +3,7 @@
     .match_content
       .flag= image_tag(random_flag)
       .flag= image_tag(random_flag)
+      %div{:style=>"clear:both;"} 
       .match_time= distance_of_time_in_words_to_now(future_match.match.played_at)
     .match_links
       .send= link_to "manda tu predicción", match_prediction_path(future_match.match), :class=>"small iframe"
