--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -133,6 +133,7 @@ div#logged_as a {
 }
 
 #main div.block div.content table.table.matches {
+	width: 100%;
 	padding: 0px;
 	border-collapse:collapse;
 }
@@ -278,7 +279,7 @@ div.block {
 
   #main h2 {
     font-size: 1.5em;
-	color: #000;
+	color: #423b13;
 	margin-bottom: 0.5em;
 }
 
@@ -823,8 +824,10 @@ div#profile_sidebar {
 
 .matches div#main {
 	background-color: white;
-	width: 600px !important;
-	padding: 10px 20px;
+	width: 550px !important;
+	-moz-border-radius: 15px;
+	-webkit-border-radius: 15px;
+	padding: 20px 20px;
 }
 
 .matches #main h1 {
