Added support for new admin system

--- a/app/views/admin/accounts/_form.html.haml
+++ b/app/views/admin/accounts/_form.html.haml
@@ -12,7 +12,7 @@
     = form.input :picture_file_size
     = form.input :picture_updated_at
     = form.input :fb_token
-    = form.input :fb
+    = form.input :fb_id
     = form.input :gender
     = form.input :encrypted_password
     = form.input :password_salt
