--- a/app/views/admin/accounts/new.html.haml
+++ b/app/views/admin/accounts/new.html.haml
@@ -1,7 +1,7 @@
-- @title = "Nuevo #{I18n.t 'activerecord.models.account'}"
+- @title = "Nueva #{I18n.t 'activerecord.models.account'}"
 
 #admin
-  %h1= "Nuevo #{I18n.t 'activerecord.models.account'}"
+  %h1= "Nueva #{I18n.t 'activerecord.models.account'}"
 
   = render :partial => 'form'
 
