--- a/app/views/admin/posts/show.html.haml
+++ b/app/views/admin/posts/show.html.haml
@@ -5,13 +5,12 @@
   %h1= "Viendo #{I18n.t 'activerecord.models.post'}"
 
   - show_for @post do |a| 
-    = a.attribute :id
-        = a.attribute :title
-        = a.attribute :content
-        = a.attribute :account
+    %h2= @post.title
+    = @post.content
+    = a.attribute :account
     
 
   .bottom_menu
     = link_to "Ver todos", admin_posts_path
-    = link_to "Editar #{I18n.t 'activerecord.models.post'}",  edit_admin_post_path(post)
+    = link_to "Editar #{I18n.t 'activerecord.models.post'}",  edit_admin_post_path(@post)
     = link_to "Crear otro", new_admin_post_path
