--- a/app/views/admin/snickers/_form.html.haml
+++ b/app/views/admin/snickers/_form.html.haml
@@ -2,6 +2,6 @@
   - form.inputs do
     = form.input :id
     = form.input :name
-    
+    = form.input :picture   
   - form.buttons do
     = form.commit_button 'Grabar',:button_html => { :class => "submit" }
