--- a/lib/generators/admin_page/templates/views/resource/index.html.haml
+++ b/lib/generators/admin_page/templates/views/resource/index.html.haml
@@ -1,6 +1,6 @@
 - @title = "Administración #{I18n.t('activerecord.models.<%= singular_name -%>').pluralize} "
 
-#admin
+#admin.index
   %h1= "Administrando #{I18n.t('activerecord.models.<%= singular_name -%>').pluralize}"
 
   #admin_menu
