--- a/app/views/admin/avatars/_form.html.haml
+++ b/app/views/admin/avatars/_form.html.haml
@@ -1,7 +1,7 @@
 - semantic_form_for ["admin",@avatar] do |form|
   - form.inputs do
     = form.input :id
-    = form.input :user
+    = form.input :account
     = form.input :shirt
     = form.input :short
     = form.input :snicker
