--- a/app/views/admin/posts/_form.html.haml
+++ b/app/views/admin/posts/_form.html.haml
@@ -1,9 +1,15 @@
-- semantic_form_for ["admin",@post] do |form|
-  - form.inputs do
-    = form.input :id
-    = form.input :title
-    = form.input :content
-    = form.input :account
+#post_form
+  - semantic_form_for ["admin",@post] do |form|
+    - form.inputs do
+      = form.input :title, :label => "Título"
+      = form.input :content, :label => "Contenido", :input_html => {:class => "tinymce"}
+      = form.input :account, :label => "Autor"
+  
+    - form.buttons do
+      = form.commit_button 'Grabar',:button_html => { :class => "submit" }
     
-  - form.buttons do
-    = form.commit_button 'Grabar',:button_html => { :class => "submit" }
+
+#post_images
+  %iframe{:src=>post_images_path, :height => "800px", :width => "400"}
+  
+%div{:style=>"clear:both;"}
