--- a/app/views/admin/posts/index.html.haml
+++ b/app/views/admin/posts/index.html.haml
@@ -1,6 +1,6 @@
 - @title = "Administración #{I18n.t('activerecord.models.post').pluralize} "
 
-#admin
+#admin.index
   %h1= "Administrando #{I18n.t('activerecord.models.post').pluralize}"
 
   #admin_menu
