--- a/lib/generators/admin_page/templates/views/layouts/admin.html.haml
+++ b/lib/generators/admin_page/templates/views/layouts/admin.html.haml
@@ -32,4 +32,4 @@
 
     #footer
       Copyright (c)
-    = javascript_include_tag 'jquery', 'jrails','fancybox/jquery.fancybox-1.3.1.pack','fancybox/jquery.easing-1.3.pack','fancybox/jquery.mousewheel-3.0.2.pack','tiny_mce/jquery.tinymce','editor_loader','application'
+    = javascript_include_tag 'jquery', 'jrails','fancybox/jquery.fancybox-1.3.1.pack','fancybox/jquery.easing-1.3.pack','fancybox/jquery.mousewheel-3.0.2.pack','tiny_mce/tiny_mce','tiny_mce/jquery.tinymce','editor_loader','application'
